[package]
name = "omni_arsenal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
clippy = "0.0.302" 
criterion = "0.5"
debug-cell = "0.1.1"
peak_alloc = "0.2.0"

[[bench]]
name = "sorting_algorithms"
harness = false

